Closed Bug 1658438 Opened 4 years ago Closed 4 years ago

perma comm/mail/test/browser/message-window/browser_vcardActions.js | Uncaught exception - at resource://testing-common/mozmill/utils.jsm:127 - TimeoutError: Timeout waiting for modal dialog to open.

Categories

(Thunderbird :: Address Book, defect, P5)

defect

Tracking

(thunderbird_esr78 unaffected, thunderbird81 fixed)

RESOLVED FIXED
82 Branch
Tracking Status
thunderbird_esr78 --- unaffected
thunderbird81 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: darktrojan)

Details

(Keywords: intermittent-failure, Whiteboard: [thunderbird-testfailure: bct][stockwell disable-recommended])

Attachments

(1 file)

Whiteboard: [thunderbird-disabled-test][thunderbird-testfailure: bct]
Whiteboard: [thunderbird-disabled-test][thunderbird-testfailure: bct] → [thunderbird-testfailure: bct]

Pretty sure this is from the ParentProcessDocumentChannel changes. Bug 1633198

Summary: Intermittent comm/mail/test/browser/message-window/browser_vcardActions.js | Uncaught exception - at resource://testing-common/mozmill/utils.jsm:127 - TimeoutError: Timeout waiting for modal dialog to open. → perma comm/mail/test/browser/message-window/browser_vcardActions.js | Uncaught exception - at resource://testing-common/mozmill/utils.jsm:127 - TimeoutError: Timeout waiting for modal dialog to open.
Assignee: nobody → geoff
Status: NEW → ASSIGNED

Obsoletes the ridiculously complicated process for doing this with a Fission-compatible actor.
I've kept some parts of the old way for now, as it's tied in with a bunch of other stuff.

Whiteboard: [thunderbird-testfailure: bct] [stockwell disable-recommended] → [thunderbird-testfailure: bct]
Target Milestone: --- → 82 Branch
Attachment #9171365 - Flags: approval-comm-beta?

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/1f914507838c
Fix adding a vCard to the address book by clicking on it. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED

Comment on attachment 9171365 [details]
Bug 1658438 - Fix adding a vCard to the address book by clicking on it. r?mkmelin

[Triage Comment]
approved for beta

Is clicking a vcard a sufficient test?

Flags: needinfo?(geoff)
Attachment #9171365 - Flags: approval-comm-beta? → approval-comm-beta+

(In reply to Wayne Mery (:wsmwk) from comment #11)

Is clicking a vcard a sufficient test?

Yeah, the automated test covers everything here, which isn't much. Sorry, this NI got old quickly.

Flags: needinfo?(geoff)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: