Bug 1658438 - Fix adding a vCard to the address book by clicking on it. r=mkmelin

Obsoletes the ridiculously complicated process for doing this with a Fission-compatible actor.
I've kept some parts of the old way for now, as it's tied in with a bunch of other stuff.

Differential Revision: https://phabricator.services.mozilla.com/D87854

--HG--
rename : mail/base/modules/PromptParent.jsm => mail/base/actors/PromptParent.jsm
extra : moz-landing-system : lando